--- a/glossary.tex
+++ b/glossary.tex
@@ -33,7 +33,7 @@
 \newacronym{pNNX0}{pNNX0}{Poměr NNX0 k počtu všech N--N intervalů (Proportion of NNX0 divided by the total number of N--N)}
 \newacronym{NNX0}{NNX0}{Počet párů sousedních N--N intervalů, které se od sebe liší o více než Xms (Number of times successive heartbeat intervals exceed Xms)}
 \newacronym{PCA}{PCA}{Analýza hlavních komponent (Principal component analysis)}
-\newacronym{tSNE}{tSNE}{t-distribuované stochastické vkládání sousedů (t-distributed stochastic neighbor embedding)}
+\newacronym{tSNE}{tSNE}{t-distribuované stochastické sdružování (t-distributed stochastic neighbor embedding)}
 \newacronym{UMAP}{UMAP}{Uniform Manifold Approximation and Projection}
 \newacronym{EFA}{EFA}{Faktorová analýza (Exploratory factor analysis)}
 \newacronym{DBSCAN}{DBSCAN}{Hustotní prostorové shlukování aplikací s šumem (Density-based spatial clustering of applications with noise)}
