--- a/library.bib
+++ b/library.bib
@@ -2457,20 +2457,12 @@
 %!   METODY
 %!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%!  Mise DIANA
-%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 @unpublished{modbus,
   address = {U.S.A, North Andover, Massachusetts},
   title   = {Modicon Modbus Protocol Reference Guide},
   url     = {https://modbus.org/docs/PI_MBUS_300.pdf},
   year    = {1996}
 }
-
-%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%!  Pouzite datasety
-%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @inproceedings{clasDataset,
   author    = {Markova, Valentina and Ganchev, Todor and Kalinkov, Kalin},
@@ -2751,6 +2743,28 @@
   year    = {2018}
 }
 
+@article{Pereira2017,
+  author  = {Pereira, Tânia and Almeida, Pedro R. and Cunha, João P. S. and Aguiar, Ana},
+  doi     = {10.1016/j.cmpb.2017.06.018},
+  issn    = {0169-2607},
+  journal = {Computer Methods and Programs in Biomedicine},
+  month   = {Sep},
+  pages   = {71–80},
+  title   = {Heart rate variability metrics for fine-grained stress level assessment},
+  volume  = {148},
+  year    = {2017}
+}
+
+@article{Shaffer2017,
+  author  = {Shaffer, Fred and Ginsberg, J. P.},
+  issn    = {2296-2565},
+  journal = {Frontiers in Public Health},
+  title   = {An Overview of Heart Rate Variability Metrics and Norms},
+  url     = {https://www.frontiersin.org/articles/10.3389/fpubh.2017.00258},
+  volume  = {5},
+  year    = {2017}
+}
+
 @article{VanGent2019,
   author  = {van Gent, Paul and Farah, Haneen and van Nes, Nicole and van Arem, Bart},
   doi     = {10.1016/j.trf.2019.09.015},
@@ -2847,6 +2861,15 @@
   series     = {Lecture Notes in Computer Science},
   title      = {Transforming Auto-Encoders},
   year       = {2011}
+}
+
+@book{West2022,
+  author    = {West, Brady T. and Welch, Kathleen B. and Galecki, Andrzej T.},
+  isbn      = {978-1-00-059827-8},
+  month     = {Jun},
+  publisher = {CRC Press},
+  title     = {Linear Mixed Models: A Practical Guide Using Statistical Software},
+  year      = {2022}
 }
 
 
@@ -2978,100 +3001,64 @@
   year      = 2021
 }
 
+%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%!   VYSLEDKY
+%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-@article{easystats,
-  author  = {Daniel Lüdecke and Mattan S. Ben-Shachar and Indrajeet Patil and Brenton M. Wiernik and Dominique Makowski},
-  journal = {CRAN},
-  note    = {R package},
-  title   = {easystats: Framework for Easy Statistical Modeling, Visualization, and Reporting},
-  url     = {https://easystats.github.io/easystats/},
-  year    = {2022}
+@phdthesis{gamboa2008,
+  author = {Gamboa, Hugo},
+  school = {Universidade T{\'e}cnica de Lisboa},
+  title  = {Multi-modal behavioral biometrics based on HCI and electrophysiology},
+  year   = {2008}
 }
 
-@article{tidyverse,
-  author  = {Hadley Wickham and Mara Averick and Jennifer Bryan and
-             Winston Chang and Lucy D'Agostino McGowan and Romain François and
-             Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester
-             and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan
-             Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson
-             and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and
-             Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-  doi     = {10.21105/joss.01686},
-  journal = {Journal of Open Source Software},
-  number  = {43},
-  pages   = {1686},
-  title   = {Welcome to the {tidyverse}},
-  volume  = {4},
-  year    = {2019}
+@article{Christov2004,
+  author  = {Christov, Ivaylo I.},
+  doi     = {10.1186/1475-925X-3-28},
+  issn    = {1475-925X},
+  journal = {BioMedical Engineering OnLine},
+  month   = {Aug},
+  number  = {1},
+  pages   = {28},
+  title   = {Real time electrocardiogram QRS detection using combined adaptive threshold},
+  volume  = {3},
+  year    = {2004}
 }
 
-@inproceedings{sklearn_api,
-  author    = {Lars Buitinck and Gilles Louppe and Mathieu Blondel and
-               Fabian Pedregosa and Andreas Mueller and Olivier Grisel and
-               Vlad Niculae and Peter Prettenhofer and Alexandre Gramfort
-               and Jaques Grobler and Robert Layton and Jake VanderPlas and
-               Arnaud Joly and Brian Holt and Ga{\"{e}}l Varoquaux},
-  booktitle = {ECML PKDD Workshop: Languages for Data Mining and Machine Learning},
-  pages     = {108--122},
-  title     = {{API} design for machine learning software: experiences from the scikit-learn
-               project},
-  year      = {2013}
+@inproceedings{Elgendi2010,
+  author  = {Elgendi, Mohamed and Jonkman, Mirjam and De Boer, Friso},
+  isbn    = {978-989-674-018-4},
+  journal = {the 3rd International Conference on Bio-inspired Systems and Signal Processing (BIOSIGNALS2010)},
+  month   = {Jan},
+  pages   = {431},
+  title   = {Frequency Bands Effects on QRS Detection.},
+  year    = {2010}
 }
 
-@misc{tensorflow,
-  author = {
-            Mart\'{i}n~Abadi and
-            Ashish~Agarwal and
-            Paul~Barham and
-            Eugene~Brevdo and
-            Zhifeng~Chen and
-            Craig~Citro and
-            Greg~S.~Corrado and
-            Andy~Davis and
-            Jeffrey~Dean and
-            Matthieu~Devin and
-            Sanjay~Ghemawat and
-            Ian~Goodfellow and
-            Andrew~Harp and
-            Geoffrey~Irving and
-            Michael~Isard and
-            Yangqing Jia and
-            Rafal~Jozefowicz and
-            Lukasz~Kaiser and
-            Manjunath~Kudlur and
-            Josh~Levenberg and
-            Dandelion~Man\'{e} and
-            Rajat~Monga and
-            Sherry~Moore and
-            Derek~Murray and
-            Chris~Olah and
-            Mike~Schuster and
-            Jonathon~Shlens and
-            Benoit~Steiner and
-            Ilya~Sutskever and
-            Kunal~Talwar and
-            Paul~Tucker and
-            Vincent~Vanhoucke and
-            Vijay~Vasudevan and
-            Fernanda~Vi\'{e}gas and
-            Oriol~Vinyals and
-            Pete~Warden and
-            Martin~Wattenberg and
-            Martin~Wicke and
-            Yuan~Yu and
-            Xiaoqiang~Zheng},
-  note   = {Software available from tensorflow.org},
-  title  = {{TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
-  url    = {https://www.tensorflow.org/},
-  year   = {2015}
+@article{Nabian2018,
+  author  = {Nabian, Mohsen and Yin, Yu and Wormwood, Jolie and Quigley, Karen S. and Barrett, Lisa F. and Ostadabbas, Sarah},
+  doi     = {10.1109/JTEHM.2018.2878000},
+  issn    = {2168-2372},
+  journal = {IEEE journal of translational engineering in health and medicine},
+  pages   = {2800711},
+  title   = {An Open-Source Feature Extraction Tool for the Analysis of Peripheral Physiological Data},
+  volume  = {6},
+  year    = {2018}
 }
 
-@misc{kereas,
-  author       = {Chollet, Fran\c{c}ois and others},
-  howpublished = {\url{https://keras.io}},
-  title        = {Keras},
-  year         = {2015}
-} 
+@inproceedings{Rodrigues2021,
+  author    = {Rodrigues, Tiago and Samoutphonh, Sirisack and Silva, Hugo and Fred, Ana},
+  booktitle = {2020 25th International Conference on Pattern Recognition (ICPR)},
+  doi       = {10.1109/ICPR48806.2021.9413245},
+  issn      = {1051-4651},
+  month     = {Jan},
+  pages     = {1–8},
+  title     = {A Low-Complexity R-peak Detection Algorithm with Adaptive Thresholding for Wearable Devices},
+  year      = {2021}
+}
 
 
 
+%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%!   DISKUZE
+%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
