--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
 
 % Packages
 \usepackage[main=czech,english]{babel}
-\usepackage{mathtools, amssymb}
+\usepackage{mathtools,amssymb}
 % \usepackage{dsfont}
 \usepackage[no-math]{fontspec}
 \usepackage{unicode-math}
@@ -88,7 +88,7 @@
 \renewcommand*{\bibfont}{\footnotesize}
 
 % Theorems
-\newtheorem{theorem}{Teorém}
+\newtheorem{theorem}{Teorém}[chapter]
 
 % Line breaks in URL
 % \def \UrlBreaks {\do\/\do\-}
