Update methods and results

--- a/library.bib
+++ b/library.bib
@@ -1574,7 +1574,7 @@
   doi      = {https://doi.org/10.1002/mus.25573},
   eprint   = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/mus.25573},
   journal  = {Muscle \& Nerve},
-  keywords = {autonomic, HRV, parasympathetic, SD2, SDNN, sympathetic},
+  keywords = {autonomic, HRV, parasympathetic, SD2, SD2, sympathetic},
   number   = {4},
   pages    = {674-678},
   title    = {Reminder: RMSSD and SD1 are identical heart rate variability metrics},
@@ -2830,9 +2830,6 @@
   year      = {2021}
 }
 
-
-
-
 @article{Mazzia2021,
   author    = {Mazzia, Vittorio and Salvetti, Francesco and Chiaberge, Marcello},
   doi       = {10.1038/s41598-021-93977-0},
@@ -2928,9 +2925,6 @@
   year       = {2013}
 }
 
-
-
-
 @inproceedings{Yong2023,
   address    = {Cham},
   author     = {Yong, Zirui and Su, Guoxin and Li, Xiaohu and Sun, Lingyun and Li, Zejian and Li, Liu},
@@ -2946,20 +2940,6 @@
   year       = {2023}
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @misc{umap2018,
   author    = {McInnes, Leland and Healy, John and Melville, James},
   doi       = {10.48550/ARXIV.1802.03426},
@@ -2971,7 +2951,28 @@
   year      = {2018}
 }
 
+@article{smote,
+  author  = {Chawla, N. V. and Bowyer, K. W. and Hall, L. O. and Kegelmeyer, W. P.},
+  doi     = {10.1613/jair.953},
+  issn    = {1076-9757},
+  journal = {Journal of Artificial Intelligence Research},
+  month   = {Jun},
+  pages   = {321–357},
+  rights  = {Copyright (c)},
+  title   = {SMOTE: Synthetic Minority Over-sampling Technique},
+  volume  = {16},
+  year    = {2002}
+}
 
+@inproceedings{tomek,
+  author    = {Batista, Gustavo and Bazzan, Ana and Monard, Maria-Carolina},
+  booktitle = {WOB},
+  journal   = {the Proc. Of Workshop on Bioinformatics},
+  month     = {Jan},
+  pages     = {18},
+  title     = {Balancing Training Data for Automated Annotation of Keywords: a Case Study.},
+  year      = {2003}
+}
 
 @article{Giorgi2022,
   abstract       = {The R programming language is approaching its 30th birthday, and in the last three decades it has achieved a prominent role in statistics, bioinformatics, and data science in general. It currently ranks among the top 10 most popular languages worldwide, and its community has produced tens of thousands of extensions and packages, with scopes ranging from machine learning to transcriptome data analysis. In this review, we provide an historical chronicle of how R became what it is today, describing all its current features and capabilities. We also illustrate the major tools of R, such as the current R editors and integrated development environments (IDEs), the R Shiny web server, the R methods for machine learning, and its relationship with other programming languages. We also discuss the role of R in science in general as a driver for reproducibility. Overall, we hope to provide both a complete snapshot of R today and a practical compendium of the major features and applications of this programming language.},
@@ -3057,7 +3058,167 @@
   year      = {2021}
 }
 
+@inproceedings{Feradov2020,
+  author    = {Feradov, Firgan and Ganchev, Todor and Markova, Valentina},
+  booktitle = {2020 International Conference on Biomedical Innovations and Applications (BIA)},
+  doi       = {10.1109/BIA50171.2020.9244287},
+  month     = {Sep},
+  pages     = {85–88},
+  title     = {Automated Detection of Cognitive Load from Peripheral Physiological Signals based on Hjorth’s Parameters},
+  year      = {2020}
+}
 
+@article{Ahmad2021,
+  author    = {Ahmad, Zeeshan and Rabbani, Suha and Zafar, Muhammad Rehman and Ishaque, Syem and Krishnan, Sridhar and Khan, Naimul},
+  doi       = {10.48550/arXiv.2107.04566},
+  month     = {Jul},
+  number    = {arXiv:2107.04566},
+  publisher = {arXiv},
+  title     = {Multi-level Stress Assessment from ECG in a Virtual Reality Environment using Multimodal Fusion},
+  url       = {http://arxiv.org/abs/2107.04566},
+  year      = {2021}
+}
+
+@inproceedings{Garg2021,
+  address    = {New York, NY, USA},
+  author     = {Garg, Prerna and Santhosh, Jayasankar and Dengel, Andreas and Ishimaru, Shoya},
+  booktitle  = {26th International Conference on Intelligent User Interfaces - Companion},
+  collection = {IUI ’21 Companion},
+  doi        = {10.1145/3397482.3450732},
+  isbn       = {978-1-4503-8018-8},
+  pages      = {43–45},
+  publisher  = {Association for Computing Machinery},
+  series     = {IUI ’21 Companion},
+  title      = {Stress Detection by Machine Learning and Wearable Sensors},
+  url        = {https://doi.org/10.1145/3397482.3450732},
+  year       = {2021}
+}
+
+@article{Rabbani2022,
+  author    = {Rabbani, Suha and Khan, Naimul},
+  doi       = {10.3390/bioengineering9080374},
+  issn      = {2306-5354},
+  journal   = {Bioengineering},
+  month     = {Aug},
+  number    = {88},
+  pages     = {374},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  rights    = {http://creativecommons.org/licenses/by/3.0/},
+  title     = {Contrastive Self-Supervised Learning for Stress Detection from ECG Data},
+  volume    = {9},
+  year      = {2022}
+}
+
+@inproceedings{Zhu2022,
+  author    = {Zhu, Lili and Spachos, Petros and Gregori, Stefano},
+  booktitle = {2022 IEEE International Symposium on Medical Measurements and Applications (MeMeA)},
+  doi       = {10.1109/MeMeA54994.2022.9856558},
+  month     = {Jun},
+  pages     = {1–6},
+  title     = {Multimodal Physiological Signals and Machine Learning for Stress Detection by Wearable Devices},
+  year      = {2022}
+}
+
+@inproceedings{Quadrini2022,
+  address    = {Cham},
+  author     = {Quadrini, Michela and Daberdaku, Sebastian and Blanda, Alessandro and Capuccio, Antonino and Bellanova, Luca and Gerard, Gianluca},
+  booktitle  = {Discovery Science},
+  collection = {Lecture Notes in Computer Science},
+  doi        = {10.1007/978-3-031-18840-4_13},
+  editor     = {Pascal, Poncelet and Ienco, Dino},
+  isbn       = {978-3-031-18840-4},
+  pages      = {173–183},
+  publisher  = {Springer Nature Switzerland},
+  series     = {Lecture Notes in Computer Science},
+  title      = {Stress Detection from Wearable Sensor Data Using Gramian Angular Fields and CNN},
+  year       = {2022}
+}
+
+@article{Chatterjee2022,
+  author  = {Chatterjee, Debatri and Dutta, Souvik and Shaikh, Rahul and Saha, Sanjoy Kumar},
+  doi     = {10.1007/s11334-022-00470-6},
+  issn    = {1614-5054},
+  journal = {Innovations in Systems and Software Engineering},
+  month   = {Jul},
+  title   = {A lightweight deep neural network for detection of mental states from physiological signals},
+  url     = {https://doi.org/10.1007/s11334-022-00470-6},
+  year    = {2022}
+}
+
+@inproceedings{Dair2023,
+  address    = {Cham},
+  author     = {Dair, Zachary and Dockray, Samantha and O’Reilly, Ruairi},
+  booktitle  = {Artificial Intelligence and Cognitive Science},
+  collection = {Communications in Computer and Information Science},
+  doi        = {10.1007/978-3-031-26438-2_1},
+  editor     = {Longo, Luca and O’Reilly, Ruairi},
+  isbn       = {978-3-031-26438-2},
+  pages      = {3–17},
+  publisher  = {Springer Nature Switzerland},
+  series     = {Communications in Computer and Information Science},
+  title      = {Inter and Intra Signal Variance in Feature Extraction and Classification of Affective State},
+  year       = {2023}
+}
+
+@inproceedings{Yong2023,
+  address    = {Cham},
+  author     = {Yong, Zirui and Su, Guoxin and Li, Xiaohu and Sun, Lingyun and Li, Zejian and Li, Liu},
+  booktitle  = {Machine Learning and Knowledge Discovery in Databases},
+  collection = {Lecture Notes in Computer Science},
+  doi        = {10.1007/978-3-031-26422-1_20},
+  editor     = {Amini, Massih-Reza and Canu, Stéphane and Fischer, Asja and Guns, Tias and Kralj Novak, Petra and Tsoumakas, Grigorios},
+  isbn       = {978-3-031-26422-1},
+  pages      = {318–334},
+  publisher  = {Springer Nature Switzerland},
+  series     = {Lecture Notes in Computer Science},
+  title      = {Recognizing Cognitive Load by a Hybrid Spatio-Temporal Causal Model from Multivariate Physiological Data},
+  year       = {2023}
+}
+
+@article{Rashid2023,
+  author  = {Rashid, Nafiul and Mortlock, Trier and Faruque, Mohammad Abdullah Al},
+  doi     = {10.1109/JIOT.2023.3265768},
+  issn    = {2327-4662},
+  journal = {IEEE Internet of Things Journal},
+  pages   = {1–1},
+  title   = {Stress Detection using Context-Aware Sensor Fusion from Wearable Devices},
+  year    = {2023}
+}
+
+@article{Henry2023,
+  author    = {Henry, John and Lloyd, Huw and Turner, Martin and Kendrick, Connah},
+  doi       = {10.36227/techrxiv.21688352.v2},
+  month     = {Mar},
+  publisher = {TechRxiv},
+  title     = {On the robustness of machine learning models for stress and anxiety recognition from heart activity signals},
+  url       = {https://www.techrxiv.org/articles/preprint/On_the_robustness_of_machine_learning_models_for_stress_and_anxiety_recognition_from_heart_activity_signals/21688352/2},
+  year      = {2023}
+}
+
+@article{Galarraga2023,
+  author    = {Sagastibeltza Galarraga, Nagore and Salazar Ramírez, Asier and Martínez Rodríguez, Raquel and Jodrá Luque, José Luis and Muguerza Rivero, Javier Francisco},
+  doi       = {10.1007/s00521-022-07435-7},
+  issn      = {1433-3058},
+  month     = {Mar},
+  publisher = {Springer},
+  rights    = {info:eu-repo/semantics/openAccess},
+  title     = {Automatic detection of the mental state in responses towards relaxation},
+  url       = {http://addi.ehu.es/handle/10810/60536},
+  year      = {2023}
+}
+
+@article{Singh2023,
+  author   = {Singh, Ghanapriya and Phukan, Orchid Chetia and Kumar, Ravinder},
+  doi      = {https://doi.org/10.1111/exsy.13239},
+  eprint   = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/exsy.13239},
+  journal  = {Expert Systems},
+  keywords = {CNN, CNN LSTM, ensemble deep learning model, Mental Healthcare system, stress recognition, WESAD dataset},
+  number   = {n/a},
+  pages    = {e13239},
+  title    = {Stress recognition with multi-modal sensing using bootstrapped ensemble deep learning model},
+  url      = {https://onlinelibrary.wiley.com/doi/abs/10.1111/exsy.13239},
+  volume   = {n/a}
+}
 
 %!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %!   DISKUZE
