--- a/glossary.tex
+++ b/glossary.tex
@@ -30,10 +30,9 @@
 \newacronym{SCL}{SCL}{Úroveň kožní vodivosti (Skin conductance level)}
 \newacronym{SCR}{SCR}{Odezva kožní vodivosti (Skin conductance response)}
 \newacronym{RMSSD}{RMSSD}{Odmocnina průměru umocněných rozdílů po sobě jdoucích N--N intervalů (Root mean square of the successive differences)}
-\newacronym{pNNX0}{pNNX0}{Poměr NNX0 k počtu všech N--N intervalů (Proportion of NNX0 divided by the total number of N--N)}
-\newacronym{NNX0}{NNX0}{Počet párů sousedních N--N intervalů, které se od sebe liší o více než Xms (Number of times successive heartbeat intervals exceed Xms)}
+\newacronym{pNN50}{pNN50}{Poměr NN500 k počtu všech N--N intervalů (Proportion of NN500 divided by the total number of N--N)}
+\newacronym{NN50}{NN50}{Počet párů sousedních N--N intervalů, které se od sebe liší o více než 50ms (Number of times successive heartbeat intervals exceed 50ms)}
 \newacronym{PCA}{PCA}{Analýza hlavních komponent (Principal component analysis)}
-\newacronym{tSNE}{tSNE}{t-distribuované stochastické sdružování (t-distributed stochastic neighbor embedding)}
 \newacronym{UMAP}{UMAP}{Uniform Manifold Approximation and Projection}
 \newacronym{EFA}{EFA}{Faktorová analýza (Exploratory factor analysis)}
 \newacronym{DBSCAN}{DBSCAN}{Hustotní prostorové shlukování aplikací s šumem (Density-based spatial clustering of applications with noise)}
@@ -41,7 +40,7 @@
 \newacronym{CV}{CV}{Křížová validace (Cross-validation)}
 \newacronym{ANN}{ANN}{Umělé neuronové sítě (Artificial neural networks)}
 \newacronym{GD}{GD}{Gradientní sestup (Gradient descent)}
-\newacronym{DT}{DT}{rozhodovací stromy (Decision trees)}
+\newacronym{DT}{DT}{Rozhodovací stromy (Decision trees)}
 \newacronym{LDA}{LDA}{Gradientní sestup (Linear discriminant analysis )}
 \newacronym{SVM}{SVM}{Gradientní sestup (Support vector machines)}
 \newacronym{SOM}{SOM}{Samoorganizující mapy (Self organizing maps)}
@@ -78,3 +77,10 @@
 \newacronym{CDF}{CDF}{Kumulativní distribuční funkce (Cumulative distribution function)}
 \newacronym{AIC}{AIC}{Akaikeho informační kritérium (Akaike information criterion)}
 \newacronym{Lasso}{Lasso}{Least absolute shrinkage and selection operator}
+\newacronym{ROC}{ROC}{Receiver operating characteristic curve}
+\newacronym{AUC}{AUC}{Plocha pod křivkou (Area under the curve)}
+\newacronym{TPR}{TPR}{Pravdivě pozitivní míra (True positive rate)}
+\newacronym{TNR}{TNR}{Pravdivě negativní míra (True negative rate)}
+\newacronym{FPR}{FPR}{Falešně pozitivní míra (False positive rate)}
+\newacronym{SMOTE}{SMOTE}{Synthetic Minority Oversampling Technique}
+\newacronym{LR}{LR}{Rychlost učení (Learning rate)}
